# performancetoday

./: .gitignore  .graphqlconfig  Pipfile  README.md  performance_today_episodes_query.graphql  pyproject.toml
performancetoday/: main.py
performancetoday/models/: episode.py
