[tool.poetry]
name = "performancetoday"
version = "2.0.0"
description = "Dataset and Analytics for Performance Today"
authors = ["David M. Coe <david@davidmcoe.com>"]
readme = "README.md"
packages = [{include = "performancetoday"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
